<resources>
    <string name="app_name">Device Pickup</string>
    <string name="device_pickup">Device Pickup</string>
    <string name="eco_atm_device_pickup">ecoATM Device Pickup</string>
    <string name="enter_user_id">Enter User ID</string>
    <string name="enter_PIN">Enter PIN</string>
    <string name="remember_me">Remember me</string>
    <string name="go_text">GO</string>
    <string name="scan_or_enter_kiosk_qr_code">Scan or Enter Kiosk QR Code</string>
    <string name="kiosk_qr_code">Kiosk QR Code</string>
    <string name="continue_text">Continue</string>
    <string name="not_merchandised">Not Merchandised</string>
    <string name="kiosk_id">Kiosk ID</string>
    <string name="missed_pickup_reason">Missed Pickup Reason</string>
    <string name="missed_pickup_reason_0">Customer Using Kiosk Over 15 Minutes</string>
    <string name="missed_pickup_reason_1">Kiosk Not at Location</string>
    <string name="missed_pickup_reason_2">Kiosk Out of Service</string>
    <string name="missed_pickup_reason_3">Out of Packaging Supplies</string>
    <string name="missed_pickup_reason_4">Scheduling Conflict – ROS Only</string>
    <string name="missed_pickup_reason_5">Security Issue – ROS Only</string>
    <string name="missed_pickup_reason_6">Weather Related Emergency</string>
    <string name="missed_pickup_reason_7">Machine Not Accessible – COVID</string>
    <string name="missed_pickup_reason_8">Staffing Issue – COVID</string>
    <string name="estimated_pickup_date">Estimated Pickup Date</string>
    <string name="submit_and_close">Submit and Close</string>
    <string name="submit_success_message">Success! Not merchandised reason sent</string>
    <string name="submit_failed_message">Failed! Not merchandised reason wasn\'t sent</string>
    <string name="shipping_boxes">Shipping Boxes</string>
    <string name="shipping_box">Shipping box</string>
    <string name="enter_number_of_shipping_boxes">Enter Number of Shipping Boxes</string>
    <string name="enter_number_of_devices">Enter Number of Devices</string>
    <string name="enter_number_of_devices_hint">Enter number of devices</string>
    <string name="number_of_devices">Number of devices</string>
    <string name="shipping_provider">Shipping Provider</string>
    <string name="shipping_provider_0">FedEx</string>
    <string name="shipping_provider_1">UPS</string>
    <string name="shipping_provider_2">USPS</string>
    <string name="scan_enter_tracking_number">Scan or Enter The Tracking Number</string>
    <string name="tracking_number">Tracking number</string>
    <string name="confirm_package">Confirm Package</string>
    <string name="package_details">Package Details</string>
    <string name="finish">Finish</string>
    <string name="edit">Edit</string>
    <string name="shipping_success_message">Success!\n Shipping information sent</string>
    <string name="shipping_failed_message">Failed!\n Shipping information was not sent</string>
    <string name="login">Login</string>
    <string name="error">Error</string>
</resources>